appId: com.example.meals
---

- launchApp

- assertVisible: "Lista de Categorias"

- tapOn: .*Favoritos.*

- assertVisible: Meus Favoritos

- tapOn: .*Categorias.*

- assertVisible: Lista de Categorias

- assertVisible: "Italiano"

- assertVisible: "Rápido & Fácil"

- assertVisible: "Hamburgers"

- assertVisible: "Alemã"

- assertVisible: "Leve & Saudável"

- assertVisible: "Exótica"

- assertVisible: "Café da Manhã"

- assertVisible: "Asiática"

- assertVisible: "Francesa"

- assertVisible: "Verão"