appId: com.example.meals
---
- launchApp

- assertVisible: "Lista de Categorias"

- tapOn: Italiano

- assertVisible: Italiano

- assertVisible: .*Spaghetti with Tomato Sauce.*
 
- tapOn: .*Spaghetti with Tomato Sauce.*

- assertVisible: Spaghetti with Tomato Sauce

- assertVisible: Ingredientes

- assertVisible: 4 Tomatoes

- assertVisible: 1 Tablespoon of Olive Oil

- assertVisible: 1 Onion

- assertVisible: 250g Spaghetti

- assertVisible: Spices

- scrollUntilVisible:
    element: Cheese (optional)
    direction: DOWN

- assertVisible: Cheese (optional)

- assertVisible: Passos

- assertVisible: .*Cut the tomatoes and the onion into small pieces..*   

- scrollUntilVisible:
    element:  .*Boil some water - add salt to it once it boils..*
    direction: DOWN

- assertVisible: .*Boil some water - add salt to it once it boils..*