appId: com.example.meals
---

- launchApp

- tapOn: "Open navigation menu"

- tapOn: "Configurações"

- assertVisible: "Configurações"

- assertVisible: "Filtros"

- assertVisible: "Glutén\nSó exibir refeições sem glúten!"

- assertVisible: "Lactose\nSó exibir refeições sem lactose!"

- assertVisible: "Vegana\nSó exibir refeições veganas!"

- assertVisible: "Vegetariana\nSó exibir refeições vegetarianas!"
