appId: com.example.meals
---
- launchApp

- assertVisible: "Lista de Categorias"

- tapOn: Italiano

- tapOn: .*Spaghetti with Tomato Sauce.*

- tapOn:
    point: 89%,90%

- back

- back

- tapOn: .*Favoritos.*

- assertVisible: Meus Favoritos

- assertVisible: .*Spaghetti with Tomato Sauce.*