appId: com.example.meals
---
- launchApp

- assertVisible: "Lista de Categorias"

- tapOn: Italiano

- tapOn: |-
    Spaghetti with Tomato Sauce
    20 min
    Simples
    Barato

- tapOn:
    point: 89%,92%

- tapOn: Back

- tapOn: Back

- tapOn: |-
    Favoritos
    Tab 2 of 2

- assertVisible: Meus Favoritos

- assertVisible: |-
    Spaghetti with Tomato Sauce
    20 min
    Simples
    Barato

- tapOn: |-
    Spaghetti with Tomato Sauce
    20 min
    Simples
    Barato
    
- tapOn:
    point: 89%,92%